# Video-Assistant

./: .gitignore  README.md  app.py  flow.py  main.py  nodes.py  pyproject.toml  test_transcript.txt
chunker/: semantic.py
data_pipeline/chunker/: semantic.py
data_pipeline/extractor/: transcript_fetcher.py  url_parse.py
data_pipeline/vector_store/: create.py  search.py  upload.py
extractor/: API_FUNCTIONS_SUMMARY.md  url_parse.py  youtube_transcript_api_reference.py
llm_engineering/: gemini_provider.py  prompt.py
vector_store/: upload.py
