[project]
name = "video-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nltk>=3.9.1",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.0.0",
    "spacy>=3.8.7",
    "youtube-transcript-api>=1.2.1",
]
